--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-TEST=test
+DB_URI=bolt://localhost:7687
+DB_USERNAME=neo4j
+DB_PASSWORD=password
+JWT_SECRET=branliangsecret
+RECAPTCHA_SECRET_KEY=6Ld6wXgUAAAAALXW9tUlnjsUUVxlUHnU6YbqMVxX
+MAIL_PASSWORD=8U73yguyLbBy6erb
