--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "date-fns": "^1.29.0",
+    "dotenv": "^6.1.0",
     "email-validator": "^1.1.1",
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
